@@ -1,7 +1,10 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
 next:
-          - add sink-rate option
+          - add sink-rate option to set rate at which idle workers will decay
+          - add mem_limit (in percent) to set a threshold of used memory after which no worker will be spawned
+          - add backgrounding-threshold option to set amount of seconds after
+            which a worker will background the current executed plugin and work on the next job.
 
 1.1.6    Mon Jul  4 09:07:29 CEST 2022
           - log max open files on startup
